# microbit-llm-tuner

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  scraper.py  viewer.html
data/collected/: 10-steps-counter.json  activity-array.json  activity-picker.json  animal-tracker.json  animated-animals.json  audible-cookie-tin-alarm.json  audible-emotion-badge.json  audible-rock-paper-scissors.json  audible-teleporting-duck.json  beating-heart.json  calming-leds.json  candle.json  clap-hearts.json  clap-lights.json  clapometer.json  compass-bearing.json  compass-north.json  conductivity-tester.json  cookie-tin-alarm.json  counter.json  dance-steps.json  dice.json  disco-lights.json  distance-calculator.json  door-alarm.json  emotion-badge.json  energy-cost-calculator.json  energy-light-meter.json  energy-light-timer.json  environment-data-logger.json  environment-exploration.json  evaporation-experiment.json  fahrenheit-thermometer.json  festive-decoration.json  fireflies.json  flashing-emotions.json  frere-jacques-tune.json  get-silly.json  get-up.json  graphical-dice.json  (+72 more)
data/golden/: 10-steps-counter.json  activity-array.json  activity-picker.json  animal-tracker.json  animated-animals.json  audible-cookie-tin-alarm.json  audible-emotion-badge.json  audible-rock-paper-scissors.json  audible-teleporting-duck.json  beating-heart.json  calming-leds.json  candle.json  clap-hearts.json  clap-lights.json  clapometer.json  compass-bearing.json  compass-north.json  conductivity-tester.json  cookie-tin-alarm.json  (+93 more)
golden/: manifest.json
tools/: viewer.html
(+271 files in other folders)
